Update cookie consent messages for clarity and consistency

--- a/calculator.html
+++ b/calculator.html
@@ -345,7 +345,7 @@ details .section{padding:12px 14px 16px}
     <details open>
       <summary><strong>What cookies and storage do you use?</strong></summary>
       <div class="section">
-        <p><em>Sivuston toiminnan ja turvallisuuden kannalta välttämättömät evästeet</em> (strictly necessary) are always on. Optional cookies include <b>Analytics</b> and <b>Ads/Marketing</b>. We also use <code>localStorage</code> to keep your calculator inputs on your device.</p>
+        <p><em>Cookies necessary for the operation and security of the site</em> (strictly necessary) are always on. Optional cookies include <b>Analytics</b> and <b>Ads/Marketing</b>. We also use <code>localStorage</code> to keep your calculator inputs on your device.</p>
       </div>
     </details>
 
@@ -404,7 +404,7 @@ details .section{padding:12px 14px 16px}
   <div class="cb-inner">
     <div class="cb-text">
       <strong>We use cookies for site functionality, analytics, and ads.</strong><br />
-      <small><em>Sivuston toiminnan ja turvallisuuden kannalta välttämättömät evästeet</em> are always on. Choose the rest below.</small>
+      <small><em>Cookies necessary for the operation and security of the site</em> are always on. Choose the rest below.</small>
     </div>
     <div class="cb-actions">
       <button class="btn" id="cb-reject">Reject non-essential</button>
