--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ footer .btn-inline{margin-left:8px}
   <div class="cb-inner">
     <div class="cb-text">
       <strong>We use cookies for site functionality, analytics, and ads.</strong><br />
-      <small><em>Sivuston toiminnan ja turvallisuuden kannalta välttämättömät evästeet</em> are always on. Choose the rest below.</small>
+      <small><em>Cookies necessary for the operation and security of the site</em> are always on. Choose the rest below.</small>
     </div>
     <div class="cb-actions">
       <button class="btn" id="cb-reject">Reject non-essential</button>
