--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
-      <span class="badge">v2.0 • Local First EV Tool</span>
+      <span class="badge">v2.0 • Local EV Tool</span>
       <h1>Plan Smarter.<br>Charge Faster.</h1>
       <p>Estimate energy needs, charging time, and trip costs instantly.<br>
         Privacy-focused and runs entirely in your browser.</p>
